--- a/src/public/index.css
+++ b/src/public/index.css
@@ -1,29 +1,29 @@
 *:not(body) {
-    font-size: inherit;
+  font-size: inherit;
 }
 
 * {
-    min-width: 0;
+  min-width: 0;
 }
 
 body {
-    margin: unset;
-    font-size: 20px;
+  margin: unset;
+  font-size: 20px;
 }
 
 body div {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 a {
-    color: inherit;
-    text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 
 p {
-    margin: unset;
-    min-width: max-content;
+  margin: unset;
+  min-width: max-content;
 }
 
 h1,
@@ -32,53 +32,69 @@ h3,
 h4,
 h5,
 h6 {
-    margin: unset;
+  margin: unset;
 }
 
 .column {
-    flex-direction: column;
+  flex-direction: column;
 }
 
 .grow {
-    flex-grow: 1;
+  flex-grow: 1;
 }
 
 .shrink {
-    flex-shrink: 1;
+  flex-shrink: 1;
 }
 
 .center-self {
-    align-self: center;
-    justify-self: center;
+  align-self: center;
+  justify-self: center;
 }
 
 .center {
-    align-items: center;
-    justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
 
 .center-v {
-    align-items: center;
+  align-items: center;
 }
 
 .center-h {
-    justify-content: center;
+  justify-content: center;
 }
 
 .main-container {
-    min-height: 100vh;
-    min-width: 100vw;
+  min-height: 100vh;
+  min-width: 100vw;
 }
 
 .bolded {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .if-container {
-    display: contents;
+  display: contents;
 }
 
 .exit-room-btn {
-    margin: 0.6em;
-    width: 6em;
+  margin: 0.6em;
+  width: 6em;
+}
+
+@keyframes onload {
+  0% {
+    opacity: 0;
+  }
+  30% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+#root > :is(.dark-theme, .light-theme) > * {
+  animation: onload 0.7s;
 }
