--- a/src/public/pages/room/components/room-id-display/styles.css
+++ b/src/public/pages/room/components/room-id-display/styles.css
@@ -1,7 +1,7 @@
 .room-id-display {
-    margin: 1em;
+  margin: 1em 1em 1em 0px;
 }
 
 .room-id-display input {
-    width: 10em;
+  width: min(10em, 35vw);
 }
