--- a/src/public/pages/room/components/room-id-display/styles.css
+++ b/src/public/pages/room/components/room-id-display/styles.css
@@ -1,7 +1,11 @@
 .room-id-display {
   margin: 1em 1em 1em 0px;
-}
 
-.room-id-display input {
-  width: min(10em, 35vw);
+  & input {
+    width: 6em;
+  }
+
+  & button {
+    min-width: 4em;
+  }
 }
