--- a/src/public/pages/room/components/round-history/styles.css
+++ b/src/public/pages/room/components/round-history/styles.css
@@ -3,6 +3,7 @@
   overflow-y: auto;
 
   & .nav-sidebar {
+    flex-grow: 1;
     & .prev-round-btn {
       display: flex;
       justify-content: space-between;
