--- a/src/public/pages/room/components/chat/styles.css
+++ b/src/public/pages/room/components/chat/styles.css
@@ -1,5 +1,6 @@
 .chat-window {
   justify-content: space-between;
+  max-height: calc(100% - 2.5em);
 
   & > div {
     max-height: calc(100% - 1.5em);
@@ -9,7 +10,6 @@
 .chat-messages {
   width: 100%;
   display: flex;
-  width: var(--sidebox-width);
   margin-bottom: 0.5em;
   flex-direction: column;
   font-size: 0.85em;
@@ -63,8 +63,6 @@
 }
 
 .chat-input-container {
-  width: var(--sidebox-width);
-
   & .chat-input {
     max-width: min(calc(100% - 1rem), 70vw);
     min-width: min(calc(100% - 1rem), 70vw);
@@ -78,4 +76,8 @@
     display: flex;
     justify-content: flex-end;
   }
+}
+
+.skeleton .message-text * {
+  opacity: 0;
 }
