--- a/src/public/pages/room/components/statistics/styles.css
+++ b/src/public/pages/room/components/statistics/styles.css
@@ -1,8 +1,14 @@
-.statistics-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    margin-left: 1em;
-    margin-top: 1em;
-    grid-gap: 0.2em;
+.statistics {
+    height: 13em;
+    justify-content: center;
+
+    & .statistics-grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+        margin-left: 1em;
+        margin-top: 1em;
+        grid-gap: 0.2em;
+        column-gap: 1.25em;
+    }
 }
