--- a/src/public/index.css
+++ b/src/public/index.css
@@ -72,12 +72,13 @@ h6 {
 }
 
 .main-container {
-    min-height: 100vh;
-    min-width: 100%;
+    height: 100vh;
+    width: 100vw;
 }
 
 .theme-provider {
-    max-height: 100vh;
+    height: 100%;
+    width: 100%;
     overflow-y: auto;
     display: flex;
     flex-direction: column;
@@ -91,9 +92,8 @@ h6 {
     display: contents;
 }
 
-.exit-room-btn {
-    margin: 0.6em;
-    width: 6em;
+.vrouter-root {
+    height: 100%;
 }
 
 @keyframes onload {
