--- a/src/public/pages/register-form/styles.css
+++ b/src/public/pages/register-form/styles.css
@@ -1,10 +1,12 @@
 .register-form {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: fit-content;
+    place-self: center;
 
-  & input {
-    max-width: 55vw;
-  }
+    & input {
+        max-width: 55vw;
+    }
 }
