feat: better help msgs, setoptions command and small fixes

--- a/src/public/pages/room/components/chat/styles.css
+++ b/src/public/pages/room/components/chat/styles.css
@@ -47,6 +47,8 @@
         }
 
         & pre {
+            white-space: pre-wrap;
+
             &.nomargin {
                 margin: 0;
             }
