--- a/src/public/components/pp-description/styles.css
+++ b/src/public/components/pp-description/styles.css
@@ -6,8 +6,25 @@
     width: clamp(380px, 27em, 30vw);
 
     & h1 {
+        display: flex;
         text-align: center;
         margin: 0.5em 0 1.5em;
+    }
+
+    & a.btn {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 1em;
+        height: 1em;
+        padding: .1em;
+        margin-left: .2em;
+
+        & img {
+            object-fit: contain;
+            width: 100%;
+            height: 100%;
+        }
     }
 
     & p {
