--- a/src/public/components/kofi-link/styles.css
+++ b/src/public/components/kofi-link/styles.css
@@ -1,6 +1,6 @@
 a.kofi-link {
     & button {
-        color: #2fa7fe;
+        color: var(--link-clr);
         text-decoration: underline;
         display: flex;
         align-items: center;
