--- a/src/public/components/page-layout/styles.css
+++ b/src/public/components/page-layout/styles.css
@@ -3,6 +3,8 @@
     min-height: 100vh;
     max-width: 100vw;
     max-height: 100vh;
+    padding-block: 1em;
+    box-sizing: border-box;
 
     & > * {
         margin-top: auto;
