--- a/src/public/index.css
+++ b/src/public/index.css
@@ -1,4 +1,11 @@
-/* <dialog> reset */
+.dark-theme {
+    --link-clr: #2fa7fe;
+}
+
+.light-theme {
+    --link-clr: #0673c3;
+}
+
 *:not(body) {
     font-size: inherit;
 }
@@ -105,6 +112,15 @@ h6 {
     min-height: 100%;
     justify-content: center;
     align-items: center;
+}
+
+.blue-link {
+    color: var(--link-clr);
+    transition: 0.2s ease-in-out;
+
+    &:hover {
+        opacity: 0.7;
+    }
 }
 
 @keyframes onload {
