--- a/src/public/pages/join-room/styles.css
+++ b/src/public/pages/join-room/styles.css
@@ -1,23 +1,29 @@
-.join-room-page > .card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: fit-content;
-    place-self: center;
-
-    & .join-form {
-        margin: 0.5em 0;
-    }
-
-    & .or-divider {
-        margin: 0 1.5em;
+.join-room-page {
+    & > .card {
         display: flex;
-        justify-content: center;
+        flex-direction: column;
         align-items: center;
+        height: fit-content;
+        place-self: center;
+
+        & .join-form {
+            margin: 0.5em 0;
+        }
+
+        & .or-divider {
+            margin: 0 1.5em;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        & .kofi-link {
+            margin-top: .5em;
+        }
     }
 
-    & .kofi-link {
-        margin-top: .5em;
+    & .privacy-link {
+        margin: 0 1em;
     }
 }
 
