feat: vote options settings

--- a/src/public/components/kofi-link/styles.css
+++ b/src/public/components/kofi-link/styles.css
@@ -5,8 +5,9 @@ a.kofi-link {
         display: flex;
         align-items: center;
 
-        & img {
+        & svg {
             height: 1.5em;
+            width: 1.5em;
             margin-left: .5em;
         }
     }
