--- a/src/public/components/pp-description/styles.css
+++ b/src/public/components/pp-description/styles.css
@@ -20,8 +20,7 @@
         padding: .1em;
         margin-left: .2em;
 
-        & img {
-            object-fit: contain;
+        & svg {
             width: 100%;
             height: 100%;
         }
