--- a/src/public/pages/join-room/styles.css
+++ b/src/public/pages/join-room/styles.css
@@ -1,4 +1,24 @@
+@keyframes delayed-view {
+    0% {
+        display: none;
+    }
+
+    99% {
+        display: none;
+    }
+
+    100% {
+        display: flex;
+    }
+}
+
 .join-room-page {
+    & .alert.delayed {
+        animation-name: delayed-view;
+        animation-duration: 2.5s;
+        animation-fill-mode: forwards;
+    }
+
     & > .card {
         display: flex;
         flex-direction: column;
